--- a/microservice-prodCat.properties
+++ b/microservice-prodCat.properties
@@ -1,1 +1,7 @@
-texte.greeting: Hello configuration
+server.port = 8082
+spring.datasource.url = jdbc:mysql://localhost:3306/mCommerce_prodCat?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
+# create-drop
