--- a/microservice-prodCat.properties
+++ b/microservice-prodCat.properties
@@ -5,3 +5,4 @@ spring.datasource.password =
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 # create-drop
+mes-configs.limitProducts= 4
