--- a/microservice-prodCat.properties
+++ b/microservice-prodCat.properties
@@ -1,4 +1,4 @@
-server.port = 8082
+#server.port = 8082
 spring.datasource.url = jdbc:mysql://localhost:3306/mCommerce_prodCat?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
