--- a/microservice-prodCat.properties
+++ b/microservice-prodCat.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 # create-drop
 mes-configs.limitProducts= 3
+#Eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
